# src/features/business/routes/index.ts
@@ -1,14 +1,17 @@
 import { Router } from "express";
 import { withTryCatch } from "../../../utils/error";
 import { BusinessModel } from "../schemas";
-import { verifyAuth } from "../../../middlewares/verify";
-import { RequestObject } from "../../../types";
+import { RequestWithUser, verifyAuth } from "../../../middlewares/verify";
 import { Business } from "../types";
 import {
   getApiValidators,
   validators,
 } from "../../../middlewares/express-validator";
 import { PostModel } from "../../post/schemas";
+import {
+  RequestWithPagination,
+  pagination,
+} from "../../../middlewares/pagination";
 
 export const router = Router();
 
@@ -16,24 +19,31 @@ export const router = Router();
 
 router
   .route("/business")
-  .get(verifyAuth, (req: RequestObject, res) => {
-    withTryCatch(req, res, async () => {
-      const { user } = req;
+  .get(
+    verifyAuth,
+    pagination,
+    (req: RequestWithUser & RequestWithPagination, res) => {
+      withTryCatch(req, res, async () => {
+        const { user, paginateOptions } = req;
 
-      const business = await BusinessModel.find({
-        createdBy: user?._id,
+        const business = await BusinessModel.paginate(
+          {
+            createdBy: user?._id,
+          },
+          paginateOptions
+        );
+
+        res.send(business);
       });
-
-      res.send(business);
-    });
-  })
+    }
+  )
   .post(
     verifyAuth,
     ...getApiValidators(
       validators.body("name").notEmpty(),
       validators.body("category").notEmpty()
     ),
-    (req: RequestObject<any, any, Business>, res) => {
+    (req: RequestWithUser<any, any, Business>, res) => {
       withTryCatch(req, res, async () => {
         const { body, user } = req;
 
@@ -58,7 +68,7 @@ router
   .get(
     verifyAuth,
     ...getApiValidators(validators.param("businessId").notEmpty()),
-    (req: RequestObject, res) => {
+    (req: RequestWithUser, res) => {
       withTryCatch(req, res, async () => {
         const { user, params, query } = req;
         const { businessId } = params;
@@ -81,7 +91,7 @@ router
   .delete(
     verifyAuth,
     ...getApiValidators(validators.param("businessId").notEmpty()),
-    (req: RequestObject, res) => {
+    (req: RequestWithUser, res) => {
       withTryCatch(req, res, async () => {
         const { user, params } = req;
         const { businessId } = params;
@@ -91,54 +101,6 @@ router
         });
 
         res.send();
-      });
-    }
-  );
-
-/////////////////////////////////////////////////////////////////
-router
-  .route("/business/:businessId/posts")
-  .get(
-    verifyAuth,
-    ...getApiValidators(validators.param("businessId").notEmpty()),
-    (req: RequestObject, res) => {
-      withTryCatch(req, res, async () => {
-        const { params } = req;
-        const { businessId } = params;
-
-        const posts = await PostModel.find({
-          businessId,
-        });
-
-        res.send(posts);
-      });
-    }
-  )
-  .post(
-    verifyAuth,
-    ...getApiValidators(
-      validators.param("businessId").notEmpty(),
-      validators.body("name").notEmpty(),
-      validators.body("description").notEmpty()
-    ),
-    (req: RequestObject, res) => {
-      withTryCatch(req, res, async () => {
-        const { params, body } = req;
-        const { businessId } = params;
-        const { amountAvailable, currency, description, name, price } = body;
-
-        const newPost = new PostModel({
-          amountAvailable,
-          businessId,
-          currency,
-          description,
-          name,
-          price,
-        });
-
-        await newPost.save();
-
-        res.send(newPost.toJSON());
       });
     }
   );
